<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="search_button_text">Поиск</string>
    <string name="library_button_text">Медиатека</string>
    <string name="settings_button_text">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>

    <string name="yandex_practicum_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email">igor.sheplyakov@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="media_library">Медиатека</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="fail_download">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="share_button">Share button</string>
    <string name="support_button">Support button</string>
    <string name="arrow_forward_button">Arrow forward button</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="current_time">00:00</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="not_created_any_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="playlists">playlists</string>
    <string name="rationale_permission_message">Необходимо разрешение для просмотра галереи</string>
    <string name="back_button">back button</string>
    <string name="playlist_image">playlist image</string>
    <string name="more_button">more button</string>
    <string name="dot">dot</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>


    <plurals name="plurals_tracks">
        <item quantity="zero">0 треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d треков</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="plurals_minutes">
        <item quantity="zero">0 минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>