<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SettingsScreenContainer">


    <TextView
        android:id="@+id/setting_title"
        style="@style/ScreenTitle"
        android:text="@string/settings" />

    <FrameLayout
        android:id="@+id/black_theme_container"
        style="@style/SettingsScreenFrameLayout">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme_button"
            style="@style/SettingsScreenImageButton" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_container"
        style="@style/SettingsScreenFrameLayout">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/share_button"
            style="@style/SettingsScreenImageButton"
            android:src="@drawable/share_icon"
            android:contentDescription="@string/share_button" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_container"
        style="@style/SettingsScreenFrameLayout">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/support_button"
            style="@style/SettingsScreenImageButton"
            android:src="@drawable/support_icon"
            android:contentDescription="@string/support_button" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/arrow_forward_container"
        style="@style/SettingsScreenFrameLayout">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/arrow_forward_button"
            style="@style/SettingsScreenImageButton"
            android:src="@drawable/arrow_forward_icon"
            android:contentDescription="@string/arrow_forward_button" />

    </FrameLayout>


</LinearLayout>