<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainScreenContainer">

    <TextView
        style="@style/MainScreenTitle"
        android:text="@string/main_screen_title" />

    <Button
        android:id="@+id/search_button"
        style="@style/MainScreenButton"
        android:text="@string/search_button_text"
        app:icon="@drawable/search_icon" />

    <Button
        android:id="@+id/media_library_button"
        style="@style/MainScreenButton"
        android:text="@string/library_button_text"
        app:icon="@drawable/library_icon" />

    <Button
        android:id="@+id/settings_button"
        style="@style/MainScreenButton"
        android:text="@string/settings_button_text"
        app:icon="@drawable/settings_icon" />
</LinearLayout>