<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/search_screen_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/create_playlist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/create_playlist_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/new_playlist"
            android:textColor="?attr/settings_header_text_color"
            android:textSize="@dimen/test_size_22sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/create_playlist_image_picker"
        android:layout_width="@dimen/image_picker_width"
        android:layout_height="@dimen/image_picker_height"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_26dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:background="@drawable/rounded_square"
        app:layout_constraintBottom_toTopOf="@id/create_playlist_name_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_label" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_playlist_name_container"
        style="@style/PlaylistEditText"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/playlist_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_image_picker">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_playlist_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_playlist_description_container"
        style="@style/PlaylistEditText"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/playlist_description"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_name_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_playlist_description"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/create_playlist_create_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_17dp"
        android:layout_marginEnd="@dimen/margin_17dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:backgroundTint="@color/yp_text_gray"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:padding="@dimen/padding_12_5dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
