<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yp_light_gray">

        <ImageView
            android:id="@+id/fragment_playlist_image"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:contentDescription="@string/playlist_image"
            android:scaleType="centerCrop"
            android:src="@drawable/track_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragment_playlist_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:scaleType="fitXY"
            android:src="@drawable/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/yp_black" />

        <TextView
            android:id="@+id/fragment_playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:fontFamily="@font/ys_display"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_playlist_image"
            tools:text="Best songs 2021" />

        <TextView
            android:id="@+id/fragment_playlist_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/yp_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_playlist_name"
            tools:text="2022" />

        <TextView
            android:id="@+id/fragment_playlist_minutes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/yp_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/fragment_playlist_dot"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_playlist_year"
            tools:text="300 минут" />

        <ImageView
            android:id="@+id/fragment_playlist_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/dot"
            android:src="@drawable/dot"
            app:layout_constraintEnd_toStartOf="@id/fragment_playlist_track_count"
            app:layout_constraintStart_toEndOf="@id/fragment_playlist_minutes_count"
            app:layout_constraintTop_toBottomOf="@id/fragment_playlist_year" />

        <TextView
            android:id="@+id/fragment_playlist_track_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/yp_black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/fragment_playlist_dot"
            app:layout_constraintTop_toBottomOf="@id/fragment_playlist_year"
            tools:text="98 треков" />

        <ImageView
            android:id="@+id/fragment_playlist_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:contentDescription="@string/share_button"
            android:src="@drawable/share_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_playlist_minutes_count" />

        <ImageView
            android:id="@+id/fragment_playlist_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/more_button"
            android:src="@drawable/more_button"
            app:layout_constraintStart_toEndOf="@id/fragment_playlist_share_button"
            app:layout_constraintTop_toBottomOf="@id/fragment_playlist_minutes_count" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/fragment_playlist_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tracks_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_list_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_13dp"
            android:layout_marginTop="@dimen/margin_24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/playlists_bottom_sheet_menu_image"
                android:layout_width="@dimen/image_size_45dp"
                android:layout_height="@dimen/image_size_45dp"
                android:layout_marginStart="@dimen/margin_13dp"
                android:layout_marginTop="@dimen/margin_32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/track_placeholder" />

            <TextView
                android:id="@+id/playlists_bottom_sheet_menu_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="38dp"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:textColor="?attr/settings_text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/playlists_bottom_sheet_menu_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Best songs 2021" />

            <TextView
                android:id="@+id/playlists_bottom_sheet_menu_count_tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display"
                android:maxLines="1"
                android:textColor="?attr/search_screen_item_artist_name_color"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@id/playlists_bottom_sheet_menu_image"
                app:layout_constraintTop_toBottomOf="@id/playlists_bottom_sheet_menu_name"
                tools:text="98 треков" />

            <TextView
                android:id="@+id/playlists_bottom_sheet_menu_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="33dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/settings_text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlists_bottom_sheet_menu_image"
                android:text="@string/share" />

            <TextView
                android:id="@+id/playlists_bottom_sheet_menu_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="33dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/settings_text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlists_bottom_sheet_menu_share"
                android:text="@string/edit_info" />

            <TextView
                android:id="@+id/playlists_bottom_sheet_menu_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="33dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/settings_text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlists_bottom_sheet_menu_edit"
                android:text="@string/delete_playlist" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>